--- a/examples/index.css
+++ b/examples/index.css
@@ -1,14 +1,4 @@
-html {
-  width: 100vw;
-  height: 100vh;
-}
-
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
+@import url("antd/dist/reset.css");
 
 #root {
   width: 100%;
