--- a/docs/src/css/custom.scss
+++ b/docs/src/css/custom.scss
@@ -1,3 +1,6 @@
+// @layer antd;
+/* @import url("antd/dist/reset.css") layer(reset); */
+
 /**
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
@@ -28,4 +31,47 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+/** docs内部全局样式影响到antd的样式，这里做一下兼容 */
+:where([class^="ant-"]) {
+  table {
+    border-collapse: collapse;
+    display: table;
+    margin-bottom: unset;
+    overflow: auto;
+
+    thead tr {
+      border-bottom: unset;
+    }
+
+    thead {
+      background-color: unset;
+    }
+
+    tr {
+      background-color: unset;
+      border-top: unset;
+    }
+
+    tr:nth-child(2n) {
+      background-color: unset;
+    }
+
+    th,
+    td {
+      border: unset;
+      padding: unset;
+    }
+
+    th {
+      background-color: unset;
+      color: unset;
+      font-weight: unset;
+    }
+
+    td {
+      color: unset;
+    }
+  }
 }
