--- a/packages/common/src/componnets/dialog/dialog.module.css
+++ b/packages/common/src/componnets/dialog/dialog.module.css
@@ -12,6 +12,11 @@
 .xph-dialog-wrapper {
   display: flex;
   flex-direction: column;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 999;
+  background-color: #fff;
 }
 .dialog__header {
   display: flex;
