--- a/packages/common/src/componnets/dialog/dialog.module.css
+++ b/packages/common/src/componnets/dialog/dialog.module.css
@@ -10,13 +10,10 @@
 }
 
 .xph-dialog-wrapper {
-  display: flex;
-  flex-direction: column;
   position: absolute;
-  left: 0;
-  top: 0;
   z-index: 999;
   background-color: #fff;
+  transform: translate(-50%, -50%);
 }
 .dialog__header {
   display: flex;
