--- a/packages/common/src/componnets/dialog/dialog.module.css
+++ b/packages/common/src/componnets/dialog/dialog.module.css
@@ -13,7 +13,7 @@
   position: absolute;
   z-index: 999;
   background-color: #fff;
-  transform: translate(-50%, -50%);
+  /* transform: translate(-50%, -50%); */
 }
 .dialog__header {
   display: flex;
