--- a/packages/common/src/componnets/dialog/dialog.module.css
+++ b/packages/common/src/componnets/dialog/dialog.module.css
@@ -1,9 +1,9 @@
 .xph-dialog-modal {
   position: absolute;
   top: 0;
-  right: 0;
-  bottom: 0;
   left: 0;
+  /* right: 0;
+  bottom: 0; */
   background-color: black;
   opacity: 0.7;
   z-index: 999;
