--- a/packages/common/src/componnets/dialog/dialog.module.css
+++ b/packages/common/src/componnets/dialog/dialog.module.css
@@ -16,6 +16,10 @@
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
+  border: 1px solid black;
+  background-color: #ccc;
+  overflow: hidden;
+  border-radius: 8px;
 }
 .dialog__header {
   display: flex;
