--- a/packages/common/src/componnets/dialog/components/minimizeDialog/index.module.css
+++ b/packages/common/src/componnets/dialog/components/minimizeDialog/index.module.css
@@ -1,17 +1,20 @@
 .minimize-windows {
   position: absolute;
-  left: 0;
-  top: 0;
+  /* left: 0;
+  top: 0; */
   display: flex;
-  flex-direction: column;
   flex-wrap: nowrap;
   align-items: center;
   justify-content: space-between;
   gap: 8px;
-  width: 200px;
+  width: 250px;
+  transform: translate(-50%, -50%);
   border-radius: 4px;
   border: 1px solid black;
   padding: 4px;
+  background-color: #ccc;
+  cursor: move;
+  user-select: none;
 }
 .minimize-windows-title {
   /* 超出省略 */
@@ -23,5 +26,5 @@
   display: flex;
   align-items: center;
   gap: 4px;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
