fix: 修改弹窗样式

--- a/packages/common/src/componnets/dialog/dialog.module.css
+++ b/packages/common/src/componnets/dialog/dialog.module.css
@@ -16,26 +16,33 @@
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
-  background-color: #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.15);
   overflow: hidden;
   border-radius: 8px;
+  box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.15), 0 4px 8px rgba(0, 0, 0, 0.1),
+    0 2px 4px rgba(0, 0, 0, 0.06);
 }
 .dialog__header {
   display: flex;
+  padding: 8px;
   justify-content: space-between;
   align-items: center;
   cursor: move;
   user-select: none;
 }
+.dialog__header-btns {
+  display: flex;
+  gap: 16px;
+}
 .dialog__main {
   flex: 1;
   height: 0;
   box-sizing: border-box;
-  padding: 8px;
+  padding: 16px;
   overflow-y: auto;
 }
 .dialog__footer {
+  padding: 8px;
   display: flex;
   justify-content: flex-end;
   gap: 8px;
