--- a/packages/common/src/componnets/dialog/components/minimizeDialog/index.module.css
+++ b/packages/common/src/componnets/dialog/components/minimizeDialog/index.module.css
@@ -2,6 +2,7 @@
   position: absolute;
   /* left: 0;
   top: 0; */
+  z-index: 999;
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
@@ -9,12 +10,14 @@
   gap: 8px;
   width: 250px;
   transform: translate(-50%, -50%);
-  border-radius: 4px;
-  border: 1px solid black;
   padding: 4px;
-  background-color: #ccc;
+  background-color: #fff;
   cursor: move;
   user-select: none;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.15), 0 4px 8px rgba(0, 0, 0, 0.1),
+    0 2px 4px rgba(0, 0, 0, 0.06);
 }
 .minimize-windows-title {
   /* 超出省略 */
@@ -25,6 +28,6 @@
 .minimize-windows-operate {
   display: flex;
   align-items: center;
-  gap: 4px;
+  gap: 8px;
   flex-wrap: nowrap;
 }
