优化弹窗样式

--- a/packages/common/src/componnets/dialog/dialog.module.css
+++ b/packages/common/src/componnets/dialog/dialog.module.css
@@ -18,7 +18,7 @@
   flex-direction: column;
   border: 1px solid rgba(0, 0, 0, 0.15);
   overflow: hidden;
-  border-radius: 8px;
+  /* border-radius: 8px; */
   box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.15), 0 4px 8px rgba(0, 0, 0, 0.1),
     0 2px 4px rgba(0, 0, 0, 0.06);
 }
@@ -29,6 +29,7 @@
   align-items: center;
   cursor: move;
   user-select: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 }
 .dialog__header-btns {
   display: flex;
