--- a/packages/common/src/componnets/dialog/components/minimizeDialog/index.module.css
+++ b/packages/common/src/componnets/dialog/components/minimizeDialog/index.module.css
@@ -15,7 +15,7 @@
   cursor: move;
   user-select: none;
   border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+  /* border-radius: 4px; */
   box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.15), 0 4px 8px rgba(0, 0, 0, 0.1),
     0 2px 4px rgba(0, 0, 0, 0.06);
 }
