--- a/packages/common/src/componnets/dialog/dialog.module.css
+++ b/packages/common/src/componnets/dialog/dialog.module.css
@@ -1,9 +1,9 @@
 .xph-dialog-mask {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  /* right: 0;
-  bottom: 0; */
+  right: 0;
+  bottom: 0;
   background-color: black;
   opacity: 0.7;
   z-index: 999;
@@ -16,9 +16,7 @@
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
-  border: 1px solid rgba(0, 0, 0, 0.15);
   overflow: hidden;
-  /* border-radius: 8px; */
   box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.15), 0 4px 8px rgba(0, 0, 0, 0.1),
     0 2px 4px rgba(0, 0, 0, 0.06);
 }
