--- a/packages/common/src/componnets/dialog/dialog.module.css
+++ b/packages/common/src/componnets/dialog/dialog.module.css
@@ -1,7 +1,9 @@
 .xph-dialog-mask {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
+  width: 100vw;
+  height: 100vh;
   background-color: black;
   opacity: 0.7;
   z-index: 999;
