--- a/docs/src/css/custom.scss
+++ b/docs/src/css/custom.scss
@@ -10,26 +10,26 @@
 /* You can override the default Infima variables here. */
 
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #4a90e2;
+  --ifm-color-primary-dark: #357abd;
+  --ifm-color-primary-darker: #2b5a9b;
+  --ifm-color-primary-darkest: #1f407a;
+  --ifm-color-primary-light: #6ab0f0;
+  --ifm-color-primary-lighter: #7ab6f1;
+  --ifm-color-primary-lightest: #8ac3f2;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #1e88e5;
+  --ifm-color-primary-dark: #1a76d2;
+  --ifm-color-primary-darker: #156ab2;
+  --ifm-color-primary-darkest: #0e4b8b;
+  --ifm-color-primary-light: #2396e4;
+  --ifm-color-primary-lighter: #2f9be7;
+  --ifm-color-primary-lightest: #5ab9e4;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
